k8s_manifests/ingress/next-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: next-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: demo.curiboard.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: demo-app-service
              port: 
                number: 3000
